Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
         <ul></ul>
       </nav>
       <section>
-        <h1>
-<a id="deep-learning-for-computer-vision-barcelona" class="anchor" href="#deep-learning-for-computer-vision-barcelona" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deep Learning for Computer Vision Barcelona</h1>
-
-<h2>
-<a id="summer-seminar-upc-etsetb-telecombcn-july-4-8-2016" class="anchor" href="#summer-seminar-upc-etsetb-telecombcn-july-4-8-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summer seminar UPC ETSETB TelecomBCN (July 4-8, 2016)</h2>
-
-<p>Deep learning technologies are at the core of the current revolution in artificial intelligence for multimedia data analysis. The convergence of big annotated data and affordable GPU hardware has allowed the training of neural networks for data analysis tasks which had been addressed until now with hand-crafted features. Architectures such as convolutional neural networks, recurrent neural networks and Q-nets for reinforcement learning have shaped a brand new scenario in signal processing. This course will cover the basic principles and applications of deep learning to computer vision problems, such as image classificatioopn, object detection or text captioning. </p>
+        <p>Deep learning technologies are at the core of the current revolution in artificial intelligence for multimedia data analysis. The convergence of big annotated data and affordable GPU hardware has allowed the training of neural networks for data analysis tasks which had been addressed until now with hand-crafted features. Architectures such as convolutional neural networks, recurrent neural networks and Q-nets for reinforcement learning have shaped a brand new scenario in signal processing. This course will cover the basic principles and applications of deep learning to computer vision problems, such as image classificatioopn, object detection or text captioning. </p>
 
 <h2>
 <a id="instructors" class="anchor" href="#instructors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Instructors</h2>
@@ -53,12 +47,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img src="./instructors/XavierGiro.jpg" alt="Xavier Giro-i-Nieto" title="Xavier Giro-i-Nieto"></th>
-<th align="center"><img src="./instructors/ElisaSayrol.jpg" alt="Elisa Sayrol" title="Elisa Sayrol"></th>
-<th align="center"><img src="./instructors/AmaiaSalvador.jpg" alt="AmaiaSalvador" title="Amaia Salvador"></th>
-<th align="center"><img src="./instructors/JordiTorres.jpg" alt="Jordi Torres" title="Jordi Torres"></th>
-<th align="center"><img src="./instructors/EvaMohedano.jpg" alt="Eva Mohedano" title="Eva Mohedano"></th>
-<th align="center"><img src="./instructors/KevinMcGuinness.jpg" alt="Kevin McGuinness" title="Kevin McGuinness"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/instructors/XavierGiro.jpg" alt="Xavier Giro-i-Nieto" title="Xavier Giro-i-Nieto"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/instructors/ElisaSayrol.jpg" alt="Elisa Sayrol" title="Elisa Sayrol"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/instructors/AmaiaSalvador.jpg" alt="AmaiaSalvador" title="Amaia Salvador"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/instructors/JordiTorres.jpg" alt="Jordi Torres" title="Jordi Torres"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/instructors/EvaMohedano.jpg" alt="Eva Mohedano" title="Eva Mohedano"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/instructors/KevinMcGuinness.jpg" alt="Kevin McGuinness" title="Kevin McGuinness"></th>
 </tr>
 </thead>
 <tbody>
@@ -79,12 +73,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img src="./logos/etsetb.png" alt="logo-etsetb" title="ETSETB TelecomBCN"></th>
-<th align="center"><img src="./logos/gpi.png" alt="logo-gpi" title="UPC Image Processing Group"></th>
-<th align="center"><img src="./logos/upc.jpg" alt="logo-upc" title="Universitat Politecnica de Catalunya"></th>
-<th align="center"><img src="./logos/bsc.gif" alt="logo-bsc" title="Barcelona Supercomputing Center"></th>
-<th align="center"><img src="./logos/insight.jpg" alt="logo-insight" title="Insight Centre for Data Analytics"></th>
-<th align="center"><img src="./logos/dcu.png" alt="logo-dcu" title="Dublin City University"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/etsetb.png" alt="logo-etsetb" title="ETSETB TelecomBCN"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/gpi.png" alt="logo-gpi" title="UPC Image Processing Group"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/upc.jpg" alt="logo-upc" title="Universitat Politecnica de Catalunya"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/bsc.gif" alt="logo-bsc" title="Barcelona Supercomputing Center"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/insight.jpg" alt="logo-insight" title="Insight Centre for Data Analytics"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/dcu.png" alt="logo-dcu" title="Dublin City University"></th>
 </tr>
 </thead>
 <tbody>
@@ -218,7 +212,7 @@
 <li>The course is offered for both master and bachelor students, but under two study programmes adapted to each profile.</li>
 <li>Class Dates: 4-8 July, 2016</li>
 <li>Class Schedule: 3-7pm (you will need 6 extra hours a day for homework during the week course)</li>
-<li>Capacity: 20 students</li>
+<li>Capacity: 20 MSc/Phd students + 10 BSc students</li>
 <li>Location: <a href="https://imatge.upc.edu/web/contact">Campus Nord UPC, Module D5, Room 010</a>
 </li>
 </ul>
@@ -270,11 +264,11 @@ to receive a notification when the additional registration period for seminars o
 <tbody>
 <tr>
 <td align="left">This course is co-funded by the Erasmus+ programme from the European Union</td>
-<td align="center"><img src="https://github.com/imatge-upc/dlcv-2016/blob/master/logos/erasmus.jpg" alt="logo-erasmus" title="Erasmus logo"></td>
+<td align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/erasmus.jpg" alt="logo-erasmus" title="Erasmus logo"></td>
 </tr>
 <tr>
 <td align="left">We gratefully acknowledge the support of <a href="http://www.nvidia.com/content/global/global.php">NVIDIA Corporation</a> with the donation of the GeoForce GTX <a href="http://www.nvidia.com/gtx-700-graphics-cards/gtx-titan-z/">Titan Z</a> and <a href="http://www.geforce.com/hardware/desktop-gpus/geforce-gtx-titan-x">Titan X</a> used in this work.</td>
-<td align="center"><img src="https://github.com/imatge-upc/dlcv-2016/blob/master/logos/nvidia.jpg" alt="logo-nvidia" title="Logo of NVidia"></td>
+<td align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/nvidia.jpg" alt="logo-nvidia" title="Logo of NVidia"></td>
 </tr>
 </tbody>
 </table>
