Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/imatge-upc/etsetb-2016-dlcv" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
-            <li><a href="https://github.com/imatge-upc/etsetb-2016-dlcv/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/imatge-upc/etsetb-2016-dlcv/tarball/master" class="button">TAR</a></li>
+            <li><a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/tarball/master" class="button">TAR</a></li>
           </ul>
         </div>
       </div><!-- end banner -->
@@ -225,8 +225,7 @@
 <ul>
 <li>Master and Phd students at UPC: You can already sign up for the course from the academic office of your school or department. More details in the <a href="http://www.etsetb.upc.edu/documents/guia_docent/assignatures/all/ang/230360.pdf">official study programme</a>
 </li>
-<li>Bachelor students at UPC: You cannot sign up for the course yet. You can track <a href="https://github.com/imatge-upc/dlcv-2016/issues/1">this issue</a> to receive a notification when the additional registration period for ETSETB seminars opens in June.
-to receive a notification when the additional registration period for seminars opens in June.</li>
+<li>Bachelor students at UPC: You can sign up for the course at the school academic office between May 16 and 20. Contact directly with the school in case this period has expired and you are still interested in signing up.</li>
 <li>Students from other universities whose host institution has signed a mobility agreement with UPC ETSETB Telecom BCN school: You can request a mobility from your host institution and sign up for the course under the same conditions as UPC Phd, master or bachelor students.</li>
 <li>Students from other universities whose host institution has not signed a mobility agreement with UPC ETSETB Telecom BCN school: You can still register as a visiting student. </li>
 </ul>
