Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 <ul>
 <li>Master and Phd students at UPC: You can already sign up for the course from the academic office of your school or department. More details in the <a href="http://www.etsetb.upc.edu/documents/guia_docent/assignatures/all/ang/230360.pdf">official study programme</a>
 </li>
-<li>Bachelor students at UPC: You can sign up for the course at the school academic office between May 16 and 20. Contact directly with the school in case this period has expired and you are still interested in signing up.</li>
+<li>Bachelor students at UPC: You can sign up for the course at the school academic office between June 1 and 5, 2016. Contact directly with the school in case this period has expired and you are still interested in signing up.</li>
 <li>Students from other universities whose host institution has signed a mobility agreement with UPC ETSETB Telecom BCN school: You can request a mobility from your host institution and sign up for the course under the same conditions as UPC Phd, master or bachelor students.</li>
 <li>Students from other universities whose host institution has not signed a mobility agreement with UPC ETSETB Telecom BCN school: You can still register as a visiting student. </li>
 </ul>
