Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 <tbody>
 <tr>
 <td align="center">3:00-3:20</td>
-<td align="center">Intro (XG)</td>
+<td align="center">Welcome XG</td>
 <td align="center">
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/augmentation.md">Augmentation</a> EM</td>
 <td align="center">
-<a href="./offtheshelf.md">Off-the-shelf</a> (AS)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/offtheshelf.md">Off-the-shelf</a> AS</td>
 <td align="center">
-<a href="./optimization.md">Optimization</a> (KM)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/optimization.md">Optimization</a> KM</td>
 <td align="center">
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/reinforcement.md">Reinforcement</a> XG</td>
 </tr>
@@ -126,11 +126,11 @@
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/classification.md">Classification</a> EM</td>
 <td align="center">Visualization AS</td>
 <td align="center">
-<a href="./ranking.md">Ranking</a> (EM)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/ranking.md">Ranking</a> EM</td>
 <td align="center">
-<a href="./adversarial.md">Adversarial</a> (ES)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/adversarial.md">Adversarial</a> ES</td>
 <td align="center">
-<a href="./objects.md">Objects</a> (AS)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/objects.md">Objects</a> AS</td>
 </tr>
 <tr>
 <td align="center">3:40-4:00</td>
@@ -139,22 +139,22 @@
 <td align="center">
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/transfer.md">Transfer</a> KM</td>
 <td align="center">
-<a href="./retrieval.md">Retrieval</a> (AS)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/retrieval.md">Retrieval</a> AS</td>
 <td align="center">
-<a href="./segmentation.md">Segmentation</a> (AS)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/segmentation.md">Segmentation</a> AS</td>
 <td align="center">
-<a href="./video.md">Video</a> (XG)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/video.md">Videos</a> XG</td>
 </tr>
 <tr>
 <td align="center">4:00-5:00</td>
 <td align="center">
-<a href="tensorflow-hello">TensorFlow 1</a> (JT)</td>
+<a href="http://www.jorditorres.org/TensorFlow/">TensorFlow</a> JT</td>
 <td align="center">
-<a href="tensorflow-hello">TensorFlow 2</a> (JT)</td>
+<a href="http://www.jorditorres.org/TensorFlow/">TensorFlow</a> JT</td>
 <td align="center">
-<a href="tensorflow-hello">TensorFlow 3</a> (JT)</td>
+<a href="http://www.jorditorres.org/TensorFlow/">TensorFlow</a> JT</td>
 <td align="center">
-<a href="tensorflow-hello">TensorFlow 4</a> (JT)</td>
+<a href="http://www.jorditorres.org/TensorFlow/">TensorFlow</a>  JT</td>
 <td align="center">Lab Exam (JT)</td>
 </tr>
 <tr>
@@ -164,20 +164,21 @@
 <td align="center">
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/annotation.md">Annotation</a> AS</td>
 <td align="center">
-<a href="./faces.md">Faces</a> (ES)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/faces.md">Faces</a> ES</td>
 <td align="center">
-<a href="./caption.md">Caption</a> (XG)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/caption.md">Caption</a> XG</td>
 <td align="center"></td>
 </tr>
 <tr>
 <td align="center">5:20-5:40</td>
 <td align="center">
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/imagenet.md">ImageNet</a> XG</td>
-<td align="center">Computation (JT)</td>
 <td align="center">
-<a href="./saliency.md">Saliency</a> (ES)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/computation.md">Computation</a> JT</td>
 <td align="center">
-<a href="./generative.md">Generative</a> (KM)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/saliency.md">Saliency</a> ES</td>
+<td align="center">
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/generative.md">Generative</a> KM</td>
 <td align="center">Project Exam (KM &amp; EM)</td>
 </tr>
 <tr>
@@ -186,9 +187,10 @@
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/frameworks.md">Frameworks</a> KM</td>
 <td align="center">
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/recurrent.md">Recurrent</a> XG</td>
-<td align="center">Memory (KM)</td>
 <td align="center">
-<a href="./vqa.md">VQA</a> (XG)</td>
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/memory.md">Memory</a> KM</td>
+<td align="center">
+<a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/vqa.md">Question</a> XG</td>
 <td align="center"></td>
 </tr>
 <tr>
@@ -250,6 +252,9 @@
 <li>Xavier Giro-i-Nieto, "Deep learning for computer vision: <a href="http://www.slideshare.net/xavigiro/deep-learning-for-computer-vision-14-image-analytics-lasalle-2016">Image</a>, <a href="http://www.slideshare.net/xavigiro/deep-learning-for-computer-vision-24-object-analytics-lasalle-2016">Object</a>, <a href="http://www.slideshare.net/xavigiro/deep-learning-for-computer-vision-34-video-analytics-lasalle-2016">Video</a> Analytics and <a href="http://www.slideshare.net/xavigiro/deep-learning-for-computer-vision-44-beyond-vision-lasalle-2016">Beyond</a>". LaSalle URL. May 2016.</li>
 <li>German Ros, Joost van de Weijer, Marc Masana, Yaxing Wang, <a href="http://www.cvc.uab.es/%7Egros/index.php/hands-on-deep-learning-with-matconvnet/">"Hands-on Deep Learning with Matconvnet"</a>. Computer Vision Center (CVC) 2015.</li>
 </ul>
+
+<h2>
+<a id="preview" class="anchor" href="#preview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Preview</h2>
 
 <h2>
 <a id="acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgements</h2>
