Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
-      ga('create', 'UA-7678045-4', 'auto');
-      ga('send', 'pageview');
-  
-  </script>
 
   </head>
   <body>
@@ -283,7 +272,7 @@
 <td align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/erasmus.jpg" alt="logo-erasmus" title="Erasmus logo"></td>
 </tr>
 <tr>
-<td align="left">This course is supported by the <a href="http://ccoe.ac.upc.edu/">NVdia GPU Center of Excellence at the Barcelona Supercomputing Center &amp; Universitat Politecnica de Catalunya</a>.</td>
+<td align="left">This course is supported by the NVdia GPU Center of Excellence at the <a href="http://www.bsc.es/">Barcelona Supercomputing Center</a> &amp; <a href="http://www.upc.edu/?set_language=en">Universitat Politecnica de Catalunya</a>.</td>
 <td align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/logos/nvidia220x234.png" alt="logo-nvidia" title="Logo of NVidia"></td>
 </tr>
 </tbody>
