Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,16 +13,6 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  
-    ga('create', 'UA-7678045-4', 'auto');
-    ga('send', 'pageview');
-  
-  </script>
   </head>
   <body>
 
@@ -235,14 +225,21 @@
 <p>Registration procedure depends on the student profile:</p>
 
 <ul>
-<li>Master and Phd students at UPC: You can already sign up for the course from the academic office of your school or department. More details in the <a href="http://www.etsetb.upc.edu/documents/guia_docent/assignatures/all/ang/230360.pdf">official study programme</a>
+<li>
+<strong>Master and Phd students at UPC:</strong> You can already sign up for the course from the academic office of your school or department. More details in the <a href="http://www.etsetb.upc.edu/documents/guia_docent/assignatures/all/ang/230360.pdf">official study programme</a>
 </li>
-<li>Bachelor students at UPC: You can sign up for the course at the school academic office between June 1 and 5, 2016. Contact directly with the school in case this period has expired and you are still interested in signing up.</li>
-<li>Students from other universities whose host institution has signed a mobility agreement with UPC ETSETB Telecom BCN school: You can request a mobility from your host institution and sign up for the course under the same conditions as UPC Phd, master or bachelor students.</li>
-<li>Students from other universities whose host institution has not signed a mobility agreement with UPC ETSETB Telecom BCN school: You can still register as a visiting student. </li>
+<li>
+<strong>Bachelor students at UPC:</strong> You can sign up for the course at the school academic office between June 1 and 5, 2016. Contact directly with the school in case this period has expired and you are still interested in signing up.</li>
+<li>
+<strong>Mobility students:</strong> If your host institution has signed an agreement with UPC ETSETB Telecom BCN school, you can request a mobility from your host institution and sign up for the course under the same conditions as UPC Phd, master or bachelor students.</li>
+<li>
+<strong>Visiting students:</strong> You must apply for being accepted in the course and cover the 100% cost of the ECTS credits, without the support of the public funds. This corresponds to 143,08 € per ECTS credit (Summer 2016). If you are interested in this option, please contact the <a href="https://www.etsetb.upc.edu/documents/tkybbvmr.html">ETSETB Telecom BCN academic office</a>
+</li>
 </ul>
 
-<p>For further administrative details, please contact <a href="https://www.etsetb.upc.edu/documents/tkybbvmr.html">ETSETB Telecom BCN academic office</a>, and please also share your question and solution in the <a href="https://github.com/imatge-upc/dlcv-2016/issues">public issues</a> section for future reference and quality improvement of the course.</p>
+<p>Sessions will be recorded in video and posted afterwards, together with the slides.</p>
+
+<p>You are also encouraged to share your questions and solution in the <a href="https://github.com/imatge-upc/dlcv-2016/issues">public issues</a> section for future reference and quality improvement of the course.</p>
 
 <h2>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h2>
