Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,16 +13,6 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-7678045-4', 'auto');
-  ga('send', 'pageview');
-
-</script>
   </head>
   <body>
 
@@ -243,8 +233,8 @@
 <li>
 <strong>Mobility students:</strong> If your host institution has signed an agreement with UPC ETSETB Telecom BCN school, you can request a mobility from your host institution and sign up for the course under the same conditions as UPC Phd, master or bachelor students.</li>
 <li>
-<strong>Visiting students:</strong> You must apply for being accepted in the course and cover the 100% cost of the ECTS credits, without the support of the public funds. This corresponds to 143,08 € per ECTS credit (Summer 2016). If you are interested in this option, please contact the <a href="https://www.etsetb.upc.edu/documents/tkybbvmr.html">ETSETB Telecom BCN academic office</a>
-</li>
+<strong>Visiting students:</strong> You must apply for being accepted in the course and cover the 100% cost of the ECTS credits, without the support of the public funds. This corresponds to 143,08 € per ECTS credit (Summer 2016). If you are interested in this option, please contact the <a href="http://www.etsetb.upc.edu/ca/els-serveis/secretaria-oberta">ETSETB Telecom BCN academic office</a>, with an e-mail to
+<a href="mailto:secretaria@etsetb.upc.edu">secretaria@etsetb.upc.edu</a> or calling at 93 405 4174 / 93 401 6772 / 93 401 5966 or 93 401 6750 in the morning (Monday to Thursday from 11 to 14 and Fridays from 11 to 13) or noons (Wednesdays and Thursdays from 16 to 17h).</li>
 </ul>
 
 <p>Sessions will be recorded in video and posted afterwards, together with the slides.</p>
