--- a/index.html
+++ b/index.html
@@ -13,17 +13,6 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-7678045-4', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
   </head>
   <body>
 
@@ -240,7 +229,7 @@
 <strong>Master and Phd students at UPC:</strong> You can already sign up for the course from the academic office of your school or department. More details in the <a href="http://www.etsetb.upc.edu/documents/guia_docent/assignatures/all/ang/230360.pdf">official study programme</a>
 </li>
 <li>
-<strong>Bachelor students at UPC:</strong> You can sign up for the course at the school academic office between June 1 and 5, 2016. Contact directly with the school in case this period has expired and you are still interested in signing up.</li>
+<strong>Bachelor students at UPC:</strong> You can sign up for the course at the school academic office between May 21 and 25, 2016.</li>
 <li>
 <strong>Mobility students:</strong> If your host institution has signed an agreement with UPC ETSETB Telecom BCN school, you can request a mobility from your host institution and sign up for the course under the same conditions as UPC Phd, master or bachelor students.</li>
 <li>
