Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-7678045-4', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
   </head>
   <body>
@@ -261,7 +250,7 @@
 <a id="related-courses" class="anchor" href="#related-courses" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Related courses</h2>
 
 <ul>
-<li>Fei-Fei Li, Andrej Karpathy, Justin Johnson, <a href="https://computing.ece.vt.edu/%7Ef15ece6504/">"CS231n: Convolutional Neural Networks for Visual Recognition"</a>. Stanford University, Spring 2016.</li>
+<li>Fei-Fei Li, Andrej Karpathy, Justin Johnson, <a href="http://cs231n.stanford.edu/">"CS231n: Convolutional Neural Networks for Visual Recognition"</a>. Stanford University, Spring 2016.</li>
 <li>Hugo Larochelle, <a href="http://info.usherbrooke.ca/hlarochelle/neural_networks/content.html">"Neural Networks"</a>. Université de Sheerbroke.</li>
 <li>Joan Bruna, <a href="https://github.com/joanbruna/stat212b">"Stats212b: Topics on Deep Learning"</a>. Berkeley University. Spring 2016.</li>
 <li>Yann LeCun, <a href="http://cilvr.nyu.edu/doku.php?id=courses%3Adeeplearning-cdf2016%3Astart">"Deep Learning: Nine Lectures at Collège de France"</a>. Collège de France, Spring 2016. [<a href="https://www.facebook.com/deeplearningcdf/?fref=nf">Facebook page</a>]</li>
