Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-7678045-4', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
   </head>
   <body>
@@ -53,7 +42,7 @@
         <p>Deep learning technologies are at the core of the current revolution in artificial intelligence for multimedia data analysis. The convergence of big annotated data and affordable GPU hardware has allowed the training of neural networks for data analysis tasks which had been addressed until now with hand-crafted features. Architectures such as convolutional neural networks, recurrent neural networks and Q-nets for reinforcement learning have shaped a brand new scenario in signal processing. This course will cover the basic principles and applications of deep learning to computer vision problems, such as image classificatioopn, object detection or text captioning. </p>
 
 <h2>
-<a id="instructors" class="anchor" href="#instructors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Instructors</h2>
+<a id="course-instructors" class="anchor" href="#course-instructors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Instructors</h2>
 
 <table>
 <thead>
@@ -77,6 +66,11 @@
 </tr>
 </tbody>
 </table>
+
+<h2>
+<a id="teaching-assistants" class="anchor" href="#teaching-assistants" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching assistants</h2>
+
+<p><a href="https://www.linkedin.com/in/m%C3%ADriam-bellver-bueno-5090b4b5">Míriam Bellver</a>, Junting Pan, <a href="https://www.linkedin.com/in/albertjimenezsanfiz">Albert Jiménez</a>,  <a href="https://www.linkedin.com/in/ferriand">Andrea Ferri</a>, <a href="https://github.com/santi-pdp">Santi Pascual</a>, Marc Carné, <a href="https://www.linkedin.com/in/alm59321">Alberto Montes</a> and <a href="https://www.linkedin.com/in/issey-masuda-mora-868a38a1">Issey Masuda</a>.</p>
 
 <h2>
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Organizers</h2>
