--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-7678045-4', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
   </head>
   <body>
@@ -81,7 +70,7 @@
 <h2>
 <a id="teaching-assistants" class="anchor" href="#teaching-assistants" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching assistants</h2>
 
-<p><a href="https://www.linkedin.com/in/m%C3%ADriam-bellver-bueno-5090b4b5">Míriam Bellver</a>, Junting Pan, <a href="https://www.linkedin.com/in/albertjimenezsanfiz">Albert Jiménez</a>,  <a href="https://www.linkedin.com/in/ferriand">Andrea Ferri</a>, <a href="https://github.com/santi-pdp">Santi Pascual</a>, Marc Carné, <a href="https://www.linkedin.com/in/alm59321">Alberto Montes</a> and <a href="https://www.linkedin.com/in/issey-masuda-mora-868a38a1">Issey Masuda</a>.</p>
+<p><a href="https://www.linkedin.com/in/m%C3%ADriam-bellver-bueno-5090b4b5">Míriam Bellver</a>, Junting Pan, <a href="https://www.linkedin.com/in/albertjimenezsanfiz">Albert Jiménez</a>,  <a href="https://www.linkedin.com/in/ferriand">Andrea Ferri</a>, <a href="https://github.com/santi-pdp">Santi Pascual</a>, <a href="https://www.linkedin.com/in/alm59321">Alberto Montes</a> and Marc Carné.</p>
 
 <h2>
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Organizers</h2>
