--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-7678045-4', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
   </head>
   <body>
@@ -50,7 +39,7 @@
         <ul></ul>
       </nav>
       <section>
-        <p>Deep learning technologies are at the core of the current revolution in artificial intelligence for multimedia data analysis. The convergence of big annotated data and affordable GPU hardware has allowed the training of neural networks for data analysis tasks which had been addressed until now with hand-crafted features. Architectures such as convolutional neural networks, recurrent neural networks and Q-nets for reinforcement learning have shaped a brand new scenario in signal processing. This course will cover the basic principles and applications of deep learning to computer vision problems, such as image classificatioopn, object detection or text captioning. </p>
+        <p>Deep learning technologies are at the core of the current revolution in artificial intelligence for multimedia data analysis. The convergence of big annotated data and affordable GPU hardware has allowed the training of neural networks for data analysis tasks which had been addressed until now with hand-crafted features. Architectures such as convolutional neural networks, recurrent neural networks and Q-nets for reinforcement learning have shaped a brand new scenario in signal processing. This course will cover the basic principles and applications of deep learning to computer vision problems, such as image classification, object detection or text captioning. </p>
 
 <h2>
 <a id="course-instructors" class="anchor" href="#course-instructors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Instructors</h2>
@@ -81,7 +70,7 @@
 <h2>
 <a id="teaching-assistants" class="anchor" href="#teaching-assistants" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching assistants</h2>
 
-<p><a href="https://www.linkedin.com/in/m%C3%ADriam-bellver-bueno-5090b4b5">Míriam Bellver</a>, Junting Pan, <a href="https://www.linkedin.com/in/albertjimenezsanfiz">Albert Jiménez</a>,  <a href="https://www.linkedin.com/in/ferriand">Andrea Ferri</a>, <a href="https://github.com/santi-pdp">Santi Pascual</a>, <a href="https://www.linkedin.com/in/alm59321">Alberto Montes</a> and Marc Carné.</p>
+<p><a href="https://www.linkedin.com/in/m%C3%ADriam-bellver-bueno-5090b4b5">Míriam Bellver</a>, Junting Pan, <a href="https://www.linkedin.com/in/albertjimenezsanfiz">Albert Jiménez</a>,  <a href="https://www.linkedin.com/in/ferriand">Andrea Ferri</a>, <a href="https://www.linkedin.com/in/alm59321">Alberto Montes</a> and Marc Carné.</p>
 
 <h2>
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Organizers</h2>
@@ -230,7 +219,7 @@
 <li>The course is offered for both master and bachelor students, but under two study programmes adapted to each profile.</li>
 <li>Class Dates: 4-8 July, 2016</li>
 <li>Class Schedule: 3-7pm (you will need 6 extra hours a day for homework during the week course)</li>
-<li>Capacity: 20 MSc/Phd students + 10 BSc students</li>
+<li>Capacity: 14 MSc students + 16 BSc students</li>
 <li>Location: <a href="https://imatge.upc.edu/web/contact">Campus Nord UPC, Module D5, Room 010</a>
 </li>
 </ul>
@@ -238,24 +227,16 @@
 <h2>
 <a id="registration" class="anchor" href="#registration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Registration</h2>
 
-<p>Registration procedure depends on the student profile:</p>
+<p>Registration is <strong>sold out</strong> for this edition of the seminar. The 30 available seats were covered by UPC TelecomBCN students.</p>
 
-<ul>
-<li>
-<strong>Master and Phd students at UPC:</strong> You can already sign up for the course from the academic office of your school or department. More details in the <a href="http://www.etsetb.upc.edu/documents/guia_docent/assignatures/all/ang/230360.pdf">official study programme</a>
-</li>
-<li>
-<strong>Bachelor students at UPC:</strong> You can sign up for the course at the school academic office between May 21 and 25, 2016.</li>
-<li>
-<strong>Mobility students:</strong> If your host institution has signed an agreement with UPC ETSETB Telecom BCN school, you can request a mobility from your host institution and sign up for the course under the same conditions as UPC Phd, master or bachelor students.</li>
-<li>
-<strong>Visiting students:</strong> You must apply for being accepted in the course and cover the 100% cost of the ECTS credits, without the support of the public funds. This corresponds to 143,08 € per ECTS credit (Summer 2016). If you are interested in this option, please contact the <a href="http://www.etsetb.upc.edu/ca/els-serveis/secretaria-oberta">ETSETB Telecom BCN academic office</a>, with an e-mail to
-<a href="mailto:secretaria@etsetb.upc.edu">secretaria@etsetb.upc.edu</a> or calling at 93 405 4174 / 93 401 6772 / 93 401 5966 or 93 401 6750 in the morning (Monday to Thursday from 11 to 14 and Fridays from 11 to 13) or noons (Wednesdays and Thursdays from 16 to 17h).</li>
-</ul>
-
-<p>Sessions will be recorded in video and posted afterwards, together with the slides.</p>
+<p>We greatly appreciate the interest of several other students who could not register. We are planning a new edition of the seminar for January 2017. You can receive any update regarding this new edition by following <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/issues/2">this issue</a>.</p>
 
 <p>You are also encouraged to share your questions and solution in the <a href="https://github.com/imatge-upc/dlcv-2016/issues">public issues</a> section for future reference and quality improvement of the course.</p>
+
+<h2>
+<a id="video-recordings" class="anchor" href="#video-recordings" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Video recordings</h2>
+
+<p>Sessions will be recorded in video and posted afterwards, together with the slides.</p>
 
 <h2>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h2>
