--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-7678045-4', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
   </head>
   <body>
@@ -81,7 +70,28 @@
 <h2>
 <a id="teaching-assistants" class="anchor" href="#teaching-assistants" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching assistants</h2>
 
-<p><a href="https://www.linkedin.com/in/m%C3%ADriam-bellver-bueno-5090b4b5">Míriam Bellver</a>, Junting Pan, <a href="https://www.linkedin.com/in/albertjimenezsanfiz">Albert Jiménez</a>,  <a href="https://www.linkedin.com/in/ferriand">Andrea Ferri</a>, <a href="https://www.linkedin.com/in/alm59321">Alberto Montes</a> and Marc Carné.</p>
+<table>
+<thead>
+<tr>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/assistants/JuntingPan160x160.jpg" alt="Junting Pan" title="Junting Pan"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/assistants/MiriamBellver160x160.jpg" alt="Míriam Bellver" title="Miriam Bellver"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/assistants/AlbertJimenez160x160.jpg" alt="AlbertJimenez" title="Albert Jiménez"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/assistants/AndreaFerri160x160.jpg" alt="Andrea Ferri" title="Andrea Ferri"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/assistants/AlbertoMontes160x160.jpg" alt="Alberto Montes" title="Alberto Montes"></th>
+<th align="center"><img src="https://raw.githubusercontent.com/imatge-upc/etsetb-2016-dlcv/master/assistants/MarcCarne160x160.jpg" alt="Marc Carné" title="Marc Carné"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center">Junting Pan</td>
+<td align="center"><a href="https://www.linkedin.com/in/m%C3%ADriam-bellver-bueno-5090b4b5">Míriam Bellver</a></td>
+<td align="center"><a href="https://www.linkedin.com/in/albertjimenezsanfiz">Albert Jiménez</a></td>
+<td align="center"><a href="https://www.linkedin.com/in/ferriand">Andrea Ferri</a></td>
+<td align="center"><a href="https://www.linkedin.com/in/alm59321">Alberto Montes</a></td>
+<td align="center">Marc Carné</td>
+</tr>
+</tbody>
+</table>
 
 <h2>
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Organizers</h2>
@@ -171,7 +181,8 @@
 <a href="https://github.com/jorditorresBCN/FirstContactWithTensorFlow">TensorFlow</a> JT</td>
 <td align="center">
 <a href="https://github.com/jorditorresBCN/FirstContactWithTensorFlow">TensorFlow</a>  JT</td>
-<td align="center">Lab Exam (JT)</td>
+<td align="center">
+<a href="https://github.com/jorditorresBCN/FirstContactWithTensorFlow">TensorFlow</a>  JT</td>
 </tr>
 <tr>
 <td align="center">5:00-5:20</td>
@@ -195,7 +206,7 @@
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/saliency.md">Saliency</a> ES</td>
 <td align="center">
 <a href="https://github.com/imatge-upc/telecombcn-2016-dlcv/blob/master/generative.md">Generative</a> KM</td>
-<td align="center">Project Exam (KM &amp; EM)</td>
+<td align="center">Project expo EM</td>
 </tr>
 <tr>
 <td align="center">5:40-6:00</td>
@@ -215,7 +226,7 @@
 <td align="center">Project</td>
 <td align="center">Project</td>
 <td align="center">Project</td>
-<td align="center">Closing (AS &amp; XG)</td>
+<td align="center">Closing ES</td>
 </tr>
 </tbody>
 </table>
